# benchmarks

./: .gitignore  CMakeLists.txt
plotting/: iterations.py  matrix_multiplication.py  multithreaded_iterations.py  multithreaded_matrix.py  multithreaded_neighbour_iteration.py  multithreaded_simd_regular_iterations.py  multithreaded_simd_regular_mandelbrot.py  multithreaded_simd_scalar_matrix.py  reverse_iterations.py  simd_regular_iterations.py  simd_regular_mandelbrot.py
scripts/: cpu_profiler_perf.sh
tests/: CMakeLists.txt  main.cpp
tests/general/cache/include/: cache.hpp  iterate.hpp  matrix.hpp
tests/general/cache/include/singlecore/: compute.hpp  compute_mandelbrot.hpp  iterate.hpp  matrix.hpp
tests/general/cache/src/: cache.cpp  compute.cpp  compute_batch.cpp  compute_mandelbrot.cpp  iterate.cpp  matrix.cpp
tests/multithreaded/: CMakeLists.txt
tests/multithreaded/cache/include/multithreaded/: iterate.hpp  matrix.hpp  matrix_as_array.hpp
tests/multithreaded/cache/src/: iterate.cpp  matrix.cpp  matrix_as_array.cpp
tests/multithreaded/compute/include/multithreaded/: mandelbrot.hpp
tests/multithreaded/compute/src/: mandelbrot.cpp
tests/simd/: CMakeLists.txt
tests/simd/cache/include/simd/: iterate.hpp  matrix.hpp  multithreaded_iterate.hpp  multithreaded_matrix.hpp
tests/simd/cache/src/: iterate.cpp  matrix.cpp  multithreaded_iterate.cpp  multithreaded_matrix.cpp
tests/simd/compute/include/simd/: mandelbrot.hpp  multithreaded_mandelbrot.hpp
tests/simd/compute/src/: mandelbrot.cpp  multithreaded_mandelbrot.cpp
tests/singlecore/: CMakeLists.txt
tests/singlecore/cache/include/singlecore/: iterate.hpp  matrix.hpp  matrix_as_array.hpp
tests/singlecore/cache/src/: iterate.cpp  matrix.cpp  matrix_as_array.cpp
tests/singlecore/compute/include/singlecore/: batch.hpp  mandelbrot.hpp
tests/singlecore/compute/src/: batch.cpp  mandelbrot.cpp
tests/utils/: CMakeLists.txt
tests/utils/include/utils/: constants.hpp  utils.hpp
tests/utils/src/: utils.cpp
